--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nick Hess",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
     "next": "^4.1.4",
     "node-sass": "^4.5.3",
