--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-import": "^11.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-transition-group": "^2.2.1",
     "sass-loader": "^6.0.6",
     "styled-jsx-plugin-postcss": "^0.1.1"
   },
