--- a/package.json
+++ b/package.json
@@ -4,55 +4,72 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next && eslint ./",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "Nick Hess",
   "license": "ISC",
   "eslintConfig": {
+    "root": true,
     "parser": "babel-eslint",
-    "extends": ["airbnb", "prettier"],
-    "plugins": "prettier",
+    "extends": [
+      "airbnb",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
     "rules": {
-      "react/jsx-filename-extension":[
-        1,
-        {
-          "extensions": [
-            ".js",
-            ".jsx"
-          ]
-        }
-      ],
+      "react/jsx-filename-extension": 0,
       "react/react-in-jsx-scope": 0,
+      "import/extensions": 0,
+      "import/no-extraneous-dependencies": 0,
+      "import/no-unresolved": 0,
       "prettier/prettier": [
         "error",
         {
           "semi": true,
           "trailingComma": "es5",
           "singleQuote": true,
-          "printWidth": "100"
+          "printWidth": 100
         }
       ]
     },
     "env": {
       "browser": true,
       "node": true
+    },
+    "globals": {
+      "React": false
     }
   },
   "dependencies": {
+    "babel-eslint": "^8.0.2",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "next": "^4.1.4",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^3.0.2",
     "postcss-easy-import": "^3.0.0",
     "postcss-import": "^11.0.0",
+    "prettier": "^1.8.2",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "sass-loader": "^6.0.6",
     "styled-jsx-plugin-postcss": "^0.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-prettier": "^2.8.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-plugin-prettier": "^2.3.1"
+  }
 }
