--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next && eslint ./",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "lint": "eslint ./"
@@ -13,11 +13,18 @@
   "author": "Nick Hess",
   "license": "ISC",
   "eslintConfig": {
-    "root": true,
     "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 2016,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
     "extends": [
       "airbnb",
-      "prettier"
+      "prettier",
+      "prettier/react"
     ],
     "plugins": [
       "prettier"
@@ -39,6 +46,7 @@
       ]
     },
     "env": {
+      "es6": true,
       "browser": true,
       "node": true
     },
@@ -69,7 +77,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^2.8.0",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-prettier": "^2.3.1"
   }
 }
