--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     },
     "extends": [
       "airbnb",
-      "prettier",
-      "prettier/react"
+      "prettier"
     ],
     "plugins": [
       "prettier"
