--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
     [
+      "env",
+      {
+        "useBuiltIns": "entry",
+      }
+    ],
+    [
       "next/babel",
       {
         "styled-jsx": {
