--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-eslint": "^8.0.2",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
