--- a/package.json
+++ b/package.json
@@ -6,63 +6,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint ./"
+    "start": "next start"
   },
   "keywords": [],
   "author": "Nick Hess",
   "license": "ISC",
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "ecmaVersion": 2016,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "extends": [
-      "airbnb",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "react/jsx-filename-extension": 0,
-      "react/react-in-jsx-scope": 0,
-      "import/extensions": 0,
-      "import/no-extraneous-dependencies": 0,
-      "import/no-unresolved": 0,
-      "prettier/prettier": [
-        "error",
-        {
-          "semi": true,
-          "trailingComma": "es5",
-          "singleQuote": true,
-          "printWidth": 100
-        }
-      ]
-    },
-    "env": {
-      "es6": true,
-      "browser": true,
-      "node": true
-    },
-    "globals": {
-      "React": false
-    }
-  },
   "dependencies": {
     "babel-eslint": "^8.0.2",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
     "next": "^4.1.4",
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^3.0.2",
@@ -76,8 +28,14 @@
     "styled-jsx-plugin-postcss": "^0.1.1"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.8.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-prettier": "^2.3.1"
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
