--- a/package.json
+++ b/package.json
@@ -11,21 +11,53 @@
   "keywords": [],
   "author": "Nick Hess",
   "license": "ISC",
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "airbnb",
+      "prettier"
+    ],
+    "plugins": "prettier",
+    "rules": {
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ],
+      "react/react-in-jsx-scope": 0,
+      "prettier/prettier": [
+        "error",
+        {
+          "semi": true,
+          "trailingComma": "es5",
+          "singleQuote": true,
+          "printWidth": "100"
+        }
+      ]
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
   "dependencies": {
-    "babel-eslint": "^8.0.2",
-    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
-    "next": "^4.1.4",
-    "node-sass": "^4.5.3",
-    "postcss-cssnext": "^3.0.2",
+    "next": "^5.0.0",
+    "node-sass": "^4.7.2",
+    "postcss-cssnext": "^3.1.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-import": "^11.0.0",
     "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "postcss-import": "^11.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
-    "styled-jsx-plugin-postcss": "^0.1.1"
+    "styled-jsx-plugin-postcss": "^0.1.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
