--- a/package.json
+++ b/package.json
@@ -48,18 +48,17 @@
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
     "next": "^5.0.0",
-    "node-sass": "^4.7.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^11.1.0",
     "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
-    "postcss-import": "^11.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "sass-loader": "^6.0.6",
     "styled-jsx-plugin-postcss": "^0.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
