--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     }
   },
   "dependencies": {
+    "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.3.0",
+    "firebase": "^4.10.1",
     "next": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-import": "^3.0.0",
