--- a/.babelrc
+++ b/.babelrc
@@ -1,48 +1,54 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "useBuiltIns": "entry",
-      }
-    ],
-    [
-      "next/babel",
-      {
-        "styled-jsx": {
-          "plugins": [
-            "styled-jsx-plugin-postcss",
-          ]
-        }
-      }
-    ]
-  ],
-  "plugins": [
-    [
-      "transform-assets-import-to-string",
-      {
-        "baseDir": "static",
-        "baseUri": "/"
-      }
-    ],
-    [
-      "module-resolver",
-      {
-        "root": ["./"],
-        "alias": {
-          "components": "./components",
-          "static": "./static",
-          "lib": "./lib"
-        }
-      }
-    ]
-  ],
   "env": {
-    "development": {
-      "plugins": ["inline-dotenv"]
-    },
     "production": {
+      "presets": ["next/babel"],
       "plugins": ["transform-inline-environment-variables"]
-    }
-  }
+    },
+    "development": {
+      "presets": [
+        [
+          "next/babel",
+          {
+            "preset-env": {
+              "targets": {
+                "browsers": "last 2 versions",
+                "node": true
+              }
+            },
+            "styled-jsx": {
+              "plugins": [
+                "styled-jsx-plugin-postcss",
+              ]
+            },
+            "transform-runtime": {
+              "regenerator": true,
+              "useBuiltIns": true,
+              "polyfill": false,
+            }
+          }
+        ]
+      ],
+      "plugins": [
+        [
+          "transform-assets-import-to-string",
+          {
+            "baseDir": "static",
+            "baseUri": "/"
+          }
+        ],
+        [
+          "module-resolver",
+          {
+            "root": ["./"],
+            "alias": {
+              "components": "./components",
+              "static": "./static",
+              "lib": "./lib"
+            }
+          }
+        ],
+        "inline-dotenv"
+      ],
+    },
+  },
 }
